// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMA page styles renders HeroAMA correctly 1`] = `
.c0 {
  text-align: center;
}

.c0 svg {
  height: 20em;
  width: auto;
}

.c0 h1 {
  font-size: 2em;
}

<div
  class="c0"
/>
`;

exports[`About page styles renders AboutMe correctly 1`] = `
.c0 {
  width: 50%;
  height: 100%;
  margin: 0 3em;
}

.c0 h1 {
  margin-bottom: 0.5em;
  font-weight: 900;
}

@media (max-width:1024px) {
  .c0 {
    margin-top: 3em;
    width: 70%;
  }
}

@media (max-width:768px) {
  .c0 {
    width: 100%;
    margin: 3em 0 0 0;
  }

  .c0 h1 {
    text-align: center;
  }

  .c0 p {
    font-size: 0.9rem;
  }
}

<div
  class="c0"
/>
`;

exports[`About page styles renders Hero correctly 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 3em;
}

@media (max-width:1024px) {
  .c0 {
    -webkit-flex-direction: column-reverse;
    -ms-flex-direction: column-reverse;
    flex-direction: column-reverse;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

@media (max-width:768px) {
  .c0 {
    margin-top: 0;
  }
}

<div
  class="c0"
/>
`;

exports[`About page styles renders ImageContainer correctly 1`] = `
.c0 {
  margin-top: 3.5em;
  width: 100%;
  height: 100%;
  max-width: 200px;
  max-height: 200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > div {
  position: relative;
  width: 180px;
  height: 180px;
  box-shadow: 0 27px 24px 0 rgba(0,0,0,0.2),0 40px 77px 0 rgba(0,0,0,0.22);
  overflow: visible;
}

.c0 > div div:nth-child(1) {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  background-color: #503282;
}

.c0 > div div:nth-child(1) div {
  width: 100%;
  height: 100%;
  background-image: url("https://kelvs.me/images/kelvs.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center center;
  -webkit-filter: url("#duotone");
  -webkit-filter: url("#duotone");
  filter: url("#duotone");
}

.c0 > div div:nth-child(2) {
  position: absolute;
  width: 100%;
  height: 100%;
  margin-top: 10%;
  margin-left: 10%;
  border: 10px solid #fff;
  font-family: "Josefin Sans",sans-serif;
}

.c0 > div div:nth-child(2) h2 {
  position: absolute;
  top: 0.4em;
  left: 1.15em;
  margin: 0;
  font-size: 5em;
  line-height: 1;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  color: #000;
  opacity: 0.15;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
}

@media (max-width:768px) {
  .c0 {
    margin-top: 0;
  }
}

@media (max-width:768px) {
  .c0 > div div:nth-child(2) h2 {
    display: none;
  }
}

<div
  class="c0"
/>
`;

exports[`About page styles renders Skills correctly 1`] = `
.c0 {
  display: block;
  width: 100%;
  height: 100%;
  margin-top: 5em;
  text-align: center;
}

.c0 h1 {
  font-weight: 900;
}

.c0 div {
  margin: 2em auto;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 div span {
  padding: 0 10px;
  margin: 0.25em;
}

.c0 div span img {
  height: 1.5em;
  width: auto;
}

@media (max-width:768px) {
  .c0 {
    margin-top: 3em;
  }
}

@media (max-width:1024px) {
  .c0 div {
    width: 75%;
  }
}

@media (max-width:768px) {
  .c0 div {
    width: 100%;
  }
}

<div
  class="c0"
/>
`;

exports[`Blog page styles renders HeroBlog correctly 1`] = `
.c0 {
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 3em;
  min-height: calc(100vh - 7rem);
}

.c0 svg {
  height: 20em;
  width: auto;
}

@media (max-width:768px) {
  .c0 {
    width: 100%;
    margin-top: 0;
  }
}

<div
  class="c0"
/>
`;

exports[`Blog page styles renders PostContainer correctly 1`] = `
.c0 {
  margin: 3em;
  max-width: 640px;
  width: 100%;
}

.c0 h1 {
  font-weight: 800;
  margin-bottom: 1em;
}

@media (max-width:1024px) {
  .c0 {
    margin: 0 1em 1em 1em;
  }
}

@media (max-width:768px) {
  .c0 p {
    font-size: 0.90em;
  }
}

<div
  class="c0"
/>
`;

exports[`Blog page styles renders PostExcerpt correctly 1`] = `
.c0 {
  margin-top: 0.75em;
}

.c0 a {
  font-weight: 700;
  font-size: 1.5em;
}

.c0 p {
  margin: 5px 0;
}

.c0 span {
  font-size: 0.8rem;
  color: #686b78;
}

@media (max-width:768px) {
  .c0 p {
    font-size: 0.90em;
  }
}

<div
  class="c0"
/>
`;

exports[`Blog page styles renders Posts correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  max-width: 640px;
  margin: 1em;
}

<div
  class="c0"
/>
`;

exports[`Contact page styles renders ContactWrapper correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c0 svg {
  width: auto;
  height: 10em;
}

@media (max-width:768px) {
  .c0 {
    margin-bottom: 1em;
  }
}

<div
  class="c0"
/>
`;

exports[`Contact page styles renders Contacts correctly 1`] = `
.c0 {
  width: 55%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin: 1em;
}

.c0 a {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  margin: 5px 0;
}

.c0 span {
  margin: 0 10px;
}

.c0 svg {
  height: 1.5em !important;
  width: auto;
  fill: #232946;
}

.dark-mode .c0 svg {
  fill: #fffffe;
}

<div
  class="c0"
/>
`;

exports[`Contact page styles renders HeroContact correctly 1`] = `
.c0 {
  margin: 5em 0;
}

.c0 h1 {
  font-size: 2em;
  margin-bottom: 10px;
}

.c0 a {
  color: #63d2ff;
  padding: 7px 0px;
  font-weight: 700;
  font-size: 18px;
  position: relative;
  border-radius: 4px;
  -webkit-transition: all ease 0.3s;
  transition: all ease 0.3s;
}

.c0 a:hover {
  color: #63d2ff;
}

.c0 a::after {
  content: "";
  width: 0px;
  height: 2px;
  background: #63d2ff;
  position: absolute;
  bottom: 0px;
  left: 0px;
  z-index: -1;
  -webkit-transition: all ease 0.3s;
  transition: all ease 0.3s;
}

.c0 a:hover::after {
  width: 100%;
}

@media (max-width:768px) {
  .c0 {
    margin-top: 2em;
  }
}

<div
  class="c0"
/>
`;

exports[`Contact page styles renders StyledWrapper correctly 1`] = `
.c0 {
  max-width: 800px;
  width: 55%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: calc(100vh - 7rem);
}

.c0 svg {
  height: 20em;
  width: auto;
}

@media (max-width:768px) {
  .c0 {
    width: 85%;
  }
}

<div
  class="c0"
/>
`;

exports[`Coomon page styles renders Container correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  max-width: 868px;
  width: auto;
  margin: 0 auto;
  height: 100%;
  min-height: calc(100vh - 7rem);
}

@media (max-width:1024px) {
  .c0 {
    margin: 3em;
    max-width: 100%;
  }
}

@media (max-width:768px) {
  .c0 {
    margin: 3em 1em;
  }
}

<section
  class="c0"
/>
`;

exports[`Coomon page styles renders HorizontalBar correctly 1`] = `
.c0 {
  width: 27%;
  position: relative;
  display: inline-block;
  min-height: 5px;
  margin-left: 0px;
  margin: 11px 0;
  padding-bottom: 0px;
  border-bottom: 3px solid #fe6056;
}

<div
  class="c0"
/>
`;

exports[`Index page styles renders AppBox correctly 1`] = `
.c0 {
  background: #fff 0 0 no-repeat padding-box;
  box-shadow: 0 3px 6px rgba(0,0,0,0.16);
  width: 32%;
  padding: 0.75em;
  margin-bottom: 1em;
  position: relative;
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
  min-height: 290px;
  color: #232946;
}

.c0:hover {
  -webkit-transform: scale(1.025);
  -ms-transform: scale(1.025);
  transform: scale(1.025);
}

.c0 img {
  border: 1px solid #000;
  width: 100%;
  height: auto;
}

.c0 span {
  margin-right: 3px;
  background-color: #232946;
  color: #fff;
  padding: 0 3px 1px 3px;
  line-height: normal;
  font-size: 12px;
  font-weight: 300;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  border-radius: 3px;
}

.c0 p {
  margin-bottom: 0;
}

@media (max-width:768px) {
  .c0 {
    width: 48%;
  }

  .c0 p {
    font-size: 0.9rem;
  }
}

@media (max-width:640px) {
  .c0 {
    width: 100%;
  }
}

<div
  class="c0"
/>
`;

exports[`Index page styles renders CallToAction correctly 1`] = `
.c0 {
  margin: 4em 0;
  font-size: 15px;
}

.c0 a {
  padding: 0 20px;
  height: 25px;
}

.c0 a::before,
.c0 a::after {
  position: absolute;
  width: 25px;
  height: 1px;
  background: #232946;
  content: "";
  opacity: 0.2;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  pointer-events: none;
}

.dark-mode .c0 a::before,
.dark-mode .c0 a::after {
  background: #fffffe;
}

.c0 a:hover {
  opacity: 0.9;
}

.c0 a::before {
  top: 0;
  left: 0;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
}

.c0 a::after {
  right: 0;
  bottom: 0;
  -webkit-transform: rotate(90deg);
  -ms-transform: rotate(90deg);
  transform: rotate(90deg);
  -webkit-transform-origin: 100% 0;
  -ms-transform-origin: 100% 0;
  transform-origin: 100% 0;
}

.c0 a:hover::before,
.c0 a:hover::after,
.c0 a:focus::before,
.c0 a:focus::after {
  opacity: 1;
}

.c0 a:hover::before,
.c0 a:focus::before {
  left: 50%;
  -webkit-transform: rotate(0deg) translateX(-50%);
  -ms-transform: rotate(0deg) translateX(-50%);
  transform: rotate(0deg) translateX(-50%);
}

.c0 a:hover::after,
.c0 a:focus::after {
  right: 50%;
  -webkit-transform: rotate(0deg) translateX(50%);
  -ms-transform: rotate(0deg) translateX(50%);
  transform: rotate(0deg) translateX(50%);
}

@media (max-width:768px) {
  .c0 {
    margin: 2em 0 0 0;
  }
}

<div
  class="c0"
/>
`;

exports[`Index page styles renders Contact correctly 1`] = `
.c0 {
  width: 20%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
}

.c0 svg {
  height: 1.5em;
  width: 100%;
  fill: #232946;
}

.dark-mode .c0 svg {
  fill: #fffffe;
}

@media (max-width:968px) {
  .c0 {
    margin: 2em 0;
  }

  .c0 svg {
    height: 1.1em;
  }
}

@media (max-width:640px) {
  .c0 {
    width: 40%;
  }
}

<div
  class="c0"
/>
`;

exports[`Index page styles renders FeaturedProjects correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0"
/>
`;

exports[`Index page styles renders H1 correctly 1`] = `
.c0 {
  margin: 2.5em 0;
  font-weight: 700;
}

@media (max-width:768px) {
  .c0 {
    margin: 2em 0;
    font-size: 1.125rem;
  }
}

<h1
  class="c0"
/>
`;

exports[`Index page styles renders HeroOne correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  font-family: "Caveat",cursive;
}

.c0 h1 {
  display: inline-block;
  overflow: visible;
  width: 100%;
  -webkit-flex: 0 auto;
  -ms-flex: 0 auto;
  flex: 0 auto;
  font-size: 4em;
  font-weight: 400;
  text-align: center;
}

.c0 span {
  font-weight: 700;
}

@media (max-width:640px) {
  .c0 h1 {
    font-size: 2em;
  }
}

<div
  class="c0"
/>
`;

exports[`Index page styles renders HeroTwo correctly 1`] = `
.c0 h1 {
  position: relative;
  font-size: 3.5em;
  font-weight: 400;
  text-align: center;
  line-height: 58px;
  font-family: "Lato",sans-serif;
}

.c0 span {
  padding-right: 5px;
  padding-left: 5px;
  background: linear-gradient( transparent 10%,#495867 10%,#495867 100%,transparent 90% );
  color: #fff;
  font-weight: 300;
  text-align: justify;
}

@media (max-width:640px) {
  .c0 h1 {
    font-size: 2em;
  }
}

@media (max-width:480px) {
  .c0 h1 {
    font-size: 1.5em;
    line-height: 35px;
  }
}

<div
  class="c0"
/>
`;

exports[`Index page styles renders HeroWrapper correctly 1`] = `
.c0 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: calc(100vh - 7rem);
  margin: 3em 0;
}

@media (max-width:1280px) {
  .c0 {
    margin-bottom: 0;
  }
}

@media (max-width:1024px) {
  .c0 {
    -webkit-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    margin-bottom: 0;
    margin-top: 0;
    min-height: calc(65vh - 7rem);
  }
}

<div
  class="c0"
/>
`;

exports[`Projects page styles renders AppCard correctly 1`] = `
.c0 {
  width: 32%;
  padding: 1em;
  margin: 0 0 10px 0;
  min-height: 130px;
  border-radius: 0.5rem;
  background-color: #fffffe;
  font-family: "Lato",sans-serif;
  box-shadow: 0 1px 6px rgba(32,33,36,0.28);
  -webkit-transition: -webkit-transform 0.2s;
  -webkit-transition: transform 0.2s;
  transition: transform 0.2s;
}

.c0:hover {
  -webkit-transform: scale(1.025);
  -ms-transform: scale(1.025);
  transform: scale(1.025);
}

.c0 a {
  padding: 0 5px;
}

.c0 a svg {
  height: 1.5rem;
  fill: #a0aec0;
}

.c0 a:hover svg {
  fill: #000;
}

@media (max-width:768px) {
  .c0 {
    width: 48%;
  }
}

@media (max-width:640px) {
  .c0 {
    width: 100%;
  }
}

<div
  class="c0"
/>
`;

exports[`Projects page styles renders AppDetails correctly 1`] = `
.c0 {
  color: #232946;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.c0 h2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.25em;
  width: 100%;
}

.c0 p {
  width: 100%;
  font-size: 14px;
  margin-bottom: 0;
}

.c0 span {
  padding: 0 2px;
  color: #fff;
  font-family: "Fira Code",monospace;
  -webkit-letter-spacing: 0.05em;
  -moz-letter-spacing: 0.05em;
  -ms-letter-spacing: 0.05em;
  letter-spacing: 0.05em;
  font-size: 0.65rem;
  margin-top: 0.5em;
  margin-right: 0.25rem;
  margin-left: 0 !important;
  background-color: #22262e;
  border-radius: 2px;
}

<div
  class="c0"
/>
`;

exports[`Projects page styles renders AppLinks correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 10px;
}

.c0 div {
  margin-top: 0;
}

<div
  class="c0"
/>
`;

exports[`Projects page styles renders Apps correctly 1`] = `
.c0 {
  margin-top: 4em;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media (max-width:768px) {
  .c0 {
    margin-top: 0;
  }
}

<div
  class="c0"
/>
`;
